--- a/app/src/main/res/layout/fragment_tela_corpo.xml
+++ b/app/src/main/res/layout/fragment_tela_corpo.xml
@@ -7,7 +7,7 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".TelaCorpo$PlaceholderFragment"
-                android:background="#aabbcc">
+                android:background="@color/white">
 
     <TextView
         android:id="@+id/section_label"
@@ -22,7 +22,8 @@
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:background="@color/white"/>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -31,6 +32,7 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/corpo"
-        android:minWidth="300sp"/>
+        android:minWidth="300sp"
+        android:background="@color/white"/>
 
 </RelativeLayout>
