--- a/app/src/main/res/layout/fragment_tela_formulario.xml
+++ b/app/src/main/res/layout/fragment_tela_formulario.xml
@@ -7,11 +7,12 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="diariodedor.pucsp.com.diariodedor.Fragments.TelaFormularioFragment"
-                android:background="#aabbcc">
+                android:background="@color/white">
 
     <TextView
         android:text="Formulário"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:background="@color/white"/>
 
 </RelativeLayout>
