--- a/app/src/main/res/layout/fragment_tela_respostas.xml
+++ b/app/src/main/res/layout/fragment_tela_respostas.xml
@@ -7,171 +7,196 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="diariodedor.pucsp.com.diariodedor.Fragments.TelaRespostasFragment"
-                android:background="#aabbcc">
+                android:background="@color/white">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Responda de forma sincera para ajudar com o tratamento"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="15sp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="2 - Intensidade da dor: (Considere a dor que mais te oncomoda)"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="12sp"/>
-
-    <RelativeLayout
-        android:orientation="horizontal"
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/relativeLayout">
+        android:layout_height="fill_parent"
+        android:id="@+id/scrollView"
+        android:background="@color/white">
 
-        <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="0dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="0dp"
+        <RelativeLayout
             android:orientation="horizontal"
-            android:baselineAligned="false"
-            android:layout_alignParentEnd="false"
-            android:measureWithLargestChild="false"
-            android:layout_alignParentBottom="false"
-            android:layout_alignParentRight="false"
-            android:layout_alignWithParentIfMissing="false">
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/relativeLayout"
+            android:layout_below="@+id/textView3"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:minHeight="80sp"
+            android:background="@color/white">
 
-            <RadioButton
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
-                android:id="@+id/radioButton0"
-                android:layout_weight="1"
-                android:textSize="10sp"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1"
-                android:id="@+id/radioButton1"
-                android:layout_weight="0"
-                android:textSize="10sp"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2"
-                android:id="@+id/radioButton2"
-                android:textSize="10sp"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="3"
-                android:id="@+id/radioButton3"
-                android:textSize="10sp"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4"
-                android:id="@+id/radioButton4"
-                android:textSize="10sp"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="5"
-                android:id="@+id/radioButton5"
-                android:textSize="10sp"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="6"
-                android:id="@+id/radioButton6"
-                android:textSize="10sp"
-                android:layout_below="@+id/relativeLayout"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Responda de forma sincera para ajudar com o tratamento"
+                android:id="@+id/textView2"
+                android:textSize="15sp"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignParentStart="true"
+                android:background="@color/white"/>
 
-            <RadioButton
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="7"
-                android:id="@+id/radioButton7"
-                android:textSize="10sp"
-                android:layout_below="@+id/relativeLayout"
-                android:layout_toRightOf="@+id/radioButton6"
-                android:layout_toEndOf="@+id/radioButton6"/>
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="2 - Intensidade da dor: (Considere a dor que mais te oncomoda)"
+                android:id="@+id/textView3"
+                android:textSize="12sp"
+                android:layout_below="@+id/textView2"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:background="@color/white"/>
 
-            <RadioButton
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="8"
-                android:id="@+id/radioButton8"
-                android:textSize="10sp"
-                android:layout_alignTop="@+id/radioButton7"
-                android:layout_toRightOf="@+id/radioButton7"
-                android:layout_toEndOf="@+id/radioButton7"/>
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Dor INSUPORTÁVEL"
+                android:id="@+id/textView5"
+                android:textColor="#FF0000"
+                android:layout_alignParentBottom="true"
+                android:layout_toRightOf="@+id/textView4"
+                android:layout_toEndOf="@+id/textView4"
+                android:layout_marginLeft="55dp"
+                android:layout_marginStart="55dp"
+                android:background="@color/white"/>
 
-            <RadioButton
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="9"
-                android:id="@+id/radioButton9"
-                android:textSize="10sp"
-                android:layout_alignTop="@+id/radioButton8"
-                android:layout_toRightOf="@+id/radioButton8"
-                android:layout_toEndOf="@+id/radioButton8"/>
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="NENHUMA dor"
+                android:id="@+id/textView4"
+                android:textColor="#00ff00"
+                android:layout_marginRight="164dp"
+                android:layout_marginEnd="164dp"
+                android:layout_marginTop="52dp"
+                android:layout_alignParentBottom="false"
+                android:layout_alignParentLeft="false"
+                android:layout_below="@+id/textView5"
+                android:background="@color/white"/>
 
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10"
-                android:id="@+id/radioButton10"
-                android:textSize="10sp"
-                android:layout_alignTop="@+id/radioButton6"
-                android:layout_centerHorizontal="true"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/textView3"
+                android:background="@color/white">
 
-        </RadioGroup>
+                <RadioGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="0dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="0dp"
+                    android:orientation="horizontal"
+                    android:baselineAligned="false"
+                    android:layout_alignParentEnd="false"
+                    android:measureWithLargestChild="false"
+                    android:layout_alignParentBottom="false"
+                    android:layout_alignParentRight="false"
+                    android:layout_alignWithParentIfMissing="false"
+                    android:background="@color/white">
 
-    </RelativeLayout>
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:id="@+id/radioButton0"
+                        android:layout_weight="1"
+                        android:textSize="10sp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="NENHUMA dor"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/relativeLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textColor="#00ff00"/>
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1"
+                        android:id="@+id/radioButton1"
+                        android:layout_weight="0"
+                        android:textSize="10sp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Dor INSUPORTÁVEL"
-        android:id="@+id/textView5"
-        android:layout_below="@+id/relativeLayout"
-        android:layout_toRightOf="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3"
-        android:textColor="#FF0000"/>
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="2"
+                        android:id="@+id/radioButton2"
+                        android:textSize="10sp"/>
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="3"
+                        android:id="@+id/radioButton3"
+                        android:textSize="10sp"/>
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="4"
+                        android:id="@+id/radioButton4"
+                        android:textSize="10sp"/>
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="5"
+                        android:id="@+id/radioButton5"
+                        android:textSize="10sp"/>
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="6"
+                        android:id="@+id/radioButton6"
+                        android:textSize="10sp"
+                        android:layout_below="@+id/relativeLayout"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"/>
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="7"
+                        android:id="@+id/radioButton7"
+                        android:textSize="10sp"
+                        android:layout_below="@+id/relativeLayout"
+                        android:layout_toRightOf="@+id/radioButton6"
+                        android:layout_toEndOf="@+id/radioButton6"/>
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="8"
+                        android:id="@+id/radioButton8"
+                        android:textSize="10sp"
+                        android:layout_alignTop="@+id/radioButton7"
+                        android:layout_toRightOf="@+id/radioButton7"
+                        android:layout_toEndOf="@+id/radioButton7"/>
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="9"
+                        android:id="@+id/radioButton9"
+                        android:textSize="10sp"
+                        android:layout_alignTop="@+id/radioButton8"
+                        android:layout_toRightOf="@+id/radioButton8"
+                        android:layout_toEndOf="@+id/radioButton8"/>
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="10"
+                        android:id="@+id/radioButton10"
+                        android:textSize="10sp"
+                        android:layout_alignTop="@+id/radioButton6"
+                        android:layout_centerHorizontal="true"/>
+
+                </RadioGroup>
+            </RelativeLayout>
+
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
