--- a/app/src/main/res/layout/fragment_tela_respostas.xml
+++ b/app/src/main/res/layout/fragment_tela_respostas.xml
@@ -98,7 +98,8 @@
                     android:layout_alignParentBottom="false"
                     android:layout_alignParentRight="false"
                     android:layout_alignWithParentIfMissing="false"
-                    android:background="@color/white">
+                    android:background="@color/white"
+                    android:id="@+id/radiogroupIntensidade">
 
                     <RadioButton
                         android:layout_width="wrap_content"
@@ -198,5 +199,149 @@
 
         </RelativeLayout>
     </ScrollView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="3b) O quanto você está deprimido ?"
+        android:id="@+id/textView6"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="88dp"
+        android:textSize="15sp"
+        android:background="@color/white"/>
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:baselineAligned="false"
+        android:measureWithLargestChild="false"
+        android:layout_alignWithParentIfMissing="false"
+        android:background="@color/white"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/radioGroupAnsiedade">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:id="@+id/radioButton"
+            android:layout_weight="1"
+            android:textSize="10sp"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"
+            android:id="@+id/radioButton11"
+            android:layout_weight="0"
+            android:textSize="10sp"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2"
+            android:id="@+id/radioButton12"
+            android:textSize="10sp"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3"
+            android:id="@+id/radioButton13"
+            android:textSize="10sp"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4"
+            android:id="@+id/radioButton14"
+            android:textSize="10sp"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5"
+            android:id="@+id/radioButton15"
+            android:textSize="10sp"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="6"
+            android:id="@+id/radioButton16"
+            android:textSize="10sp"
+            android:layout_below="@+id/relativeLayout"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="7"
+            android:id="@+id/radioButton17"
+            android:textSize="10sp"
+            android:layout_below="@+id/relativeLayout"
+            android:layout_toRightOf="@+id/radioButton16"
+            android:layout_toEndOf="@+id/radioButton16"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="8"
+            android:id="@+id/radioButton18"
+            android:textSize="10sp"
+            android:layout_alignTop="@+id/radioButton17"
+            android:layout_toRightOf="@+id/radioButton17"
+            android:layout_toEndOf="@+id/radioButton17"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="9"
+            android:id="@+id/radioButton19"
+            android:textSize="10sp"
+            android:layout_alignTop="@+id/radioButton18"
+            android:layout_toRightOf="@+id/radioButton18"
+            android:layout_toEndOf="@+id/radioButton18"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="10"
+            android:id="@+id/radioButton20"
+            android:textSize="10sp"
+            android:layout_alignTop="@+id/radioButton16"
+            android:layout_centerHorizontal="true"/>
+    </RadioGroup>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="NADA"
+        android:id="@+id/textView7"
+        android:layout_below="@+id/radioGroupAnsiedade"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@color/white"
+        android:textColor="#00ff00"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TOTALMENTE"
+        android:id="@+id/textView8"
+        android:layout_below="@+id/radioGroupAnsiedade"
+        android:layout_alignRight="@+id/radioGroupAnsiedade"
+        android:layout_alignEnd="@+id/radioGroupAnsiedade"
+        android:background="@color/white"
+        android:textColor="#ff0000"/>
 
 </RelativeLayout>
