--- a/app/src/main/res/layout/activity_tela_formulario.xml
+++ b/app/src/main/res/layout/activity_tela_formulario.xml
@@ -1,7 +1,23 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          android:id="@+id/fragment"
-          android:name="diariodedor.pucsp.com.diariodedor.Fragments.TelaFormularioFragment"
-          tools:layout="@layout/fragment_tela_formulario"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"/>
+<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="diariodedor.pucsp.com.diariodedor.View.TelaFormulario">
+
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+    <fragment android:id="@+id/navigation_drawer"
+              android:layout_width="@dimen/navigation_drawer_width"
+              android:layout_height="match_parent"
+              android:layout_gravity="start"
+              android:name="diariodedor.pucsp.com.diariodedor.Util.NavigationDrawerFragment"
+              tools:layout="@layout/fragment_navigation_drawer"/>
+
+</android.support.v4.widget.DrawerLayout>
